Added footer slider navigation, still need to properly reset slides when leaving them

--- a/index.html
+++ b/index.html
@@ -378,6 +378,9 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <nav id="slides-navigation"></nav>
+        </footer>
         <script src="js/helper.js"></script>
         <script src="js/witnessSliderController.js"></script>
         <script src="js/cabSliderController.js"></script>
