--- a/index.html
+++ b/index.html
@@ -179,9 +179,7 @@
                         </section>
                     </section>
                     <div class="explanation-graphic">
-                        <div id="taxidentville-graphics-container" class="taxidentville-graphics-container">
-                            <img src="images/taxidentville.png" />
-                        </div>
+                        <div id="taxidentville-graphics-container" class="taxidentville-graphics-container"><img src="images/taxidentville.png" /></div>
                     </div>
                 </div>
             </section>
