Added sharing options in the footer's bottom right and in the credits slide

--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
                             created by
                         </p>
                         <h1>Gal Green</h1>
+                        <span class="not-blue">(not blue)</span>
                         <p class="for-eej">
                             for the Explorable Explanations Jam
                         </p>
@@ -369,7 +370,9 @@
                             You - for checking this out
                         </p>
                         <p>
-                            Say hi to me on: <a href="https://www.facebook.com/gal.green" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/pub/gal-green/8/95a/205" target="_blank">LinkedIn</a>
+                            so share: <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//galgreen.com/TaxiCabProblem/" target="_blank">Facebook</a>, <a href="https://twitter.com/intent/tweet?text=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">Twitter</a>, <a href="mailto:?subject=The%20Taxicab%20Problem&body=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">Mail</a> |
+                            very me: <a href="https://www.facebook.com/gal.green" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/pub/gal-green/8/95a/205" target="_blank">LinkedIn</a> |
+                            such open-source: <a href="https://github.com/Demeno/TaxicabExplorable" target="_blank">GitHub</a>
                         </p>
                         <p>
                             Based on the original taxicab problem by Amos Tversky and Daniel Kahneman (1982)
@@ -380,6 +383,17 @@
         </div>       
         <footer>
             <nav id="slides-navigation"></nav>
+            <div class="share-buttons">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//galgreen.com/TaxiCabProblem/" target="_blank">
+                    <svg><use xlink:href="svg/sprite.svg#share_facebook"></use></svg>
+                </a>
+                <a href="https://twitter.com/intent/tweet?text=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">
+                    <svg><use xlink:href="svg/sprite.svg#share_twitter"></use></svg>
+                </a>
+                <a href="mailto:?subject=The%20Taxicab%20Problem&body=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">
+                    <svg><use xlink:href="svg/sprite.svg#share_mail"></use></svg>
+                </a>
+            </div>
         </footer>
         <script src="js/helper.js"></script>
         <script src="js/witnessSliderController.js"></script>
