Small reorganizing of the links in the credits slide

--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
                             You - for checking this out
                         </p>
                         <p>
-                            so share: <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//galgreen.com/TaxiCabProblem/" target="_blank">Facebook</a>, <a href="https://twitter.com/intent/tweet?text=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">Twitter</a>, <a href="mailto:?subject=The%20Taxicab%20Problem&body=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">Mail</a> |
-                            very me: <a href="https://www.facebook.com/gal.green" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/pub/gal-green/8/95a/205" target="_blank">LinkedIn</a> |
-                            such open-source: <a href="https://github.com/Demeno/TaxicabExplorable" target="_blank">GitHub</a>
+                            Share it: <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//galgreen.com/TaxiCabProblem/" target="_blank">Facebook</a>, <a href="https://twitter.com/intent/tweet?text=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">Twitter</a>, <a href="mailto:?subject=The%20Taxicab%20Problem&body=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">Mail</a><br/>
+                            Find me: <a href="https://www.facebook.com/gal.green" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/pub/gal-green/8/95a/205" target="_blank">LinkedIn</a> |
+                            Find the code (open-source): <a href="https://github.com/Demeno/TaxicabExplorable" target="_blank">GitHub</a>
                         </p>
                         <p>
                             Based on the original taxicab problem by Amos Tversky and Daniel Kahneman (1982)
