Added subtle cta text highlighting

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             To make it simpler let's look at a small town with just 9 green cabs and 1 blue cab.
                         </p>
                         <p>
-                            But 9 and 1 is boring, go ahead and move the line to, I don’t know, 6 blue and 4 green cabs.
+                            But 9 and 1 is boring, <span class="cta">go ahead and move the line to, I don’t know, 6 blue and 4 green cabs.</span>
                         </p>
                     </section>
                     <section id="slide2-cabs-slider"></section>
@@ -246,7 +246,7 @@
                                 <div class="bottom-part">
                                     <p class="centered-text">
                                         but the witness isn’t always useless,<br/>
-                                        go ahead and change half of the cabs to blue.
+                                        <span class="cta">go ahead and change half of the cabs to blue.</span>
                                     </p>
                                 </div>
                             </section>
@@ -272,9 +272,9 @@
                                         are you ready for a challenge? let’s play with the witness a bit
                                     </p>
                                     <p class="centered-text">
-                                        To continue, make the witness see:<br/>
+                                        <span class="cta">To continue, make the witness see:<br/>
                                         1 real blue car + 2 blue cars that are actually green +<br/>
-                                        7 real green cars.
+                                        7 real green cars.</span>
                                     </p>
                                 </div>
                             </section>
