Added link to survey

--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@
                             My thanks to:<br/>
                             Erez Reznikov - for some graphic design tips<br/>
                             Nicky Case - for the inspiration and making this jam happen<br/>
-                            My boss Alon - for letting me miss some work to make the jam deadline<br/>
                             You - for checking this out
                         </p>
                         <p>
                             Share it: <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//galgreen.com/TaxiCabProblem/" target="_blank">Facebook</a>, <a href="https://twitter.com/intent/tweet?text=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">Twitter</a>, <a href="mailto:?subject=The%20Taxicab%20Problem&body=An%20unintuitive%20probability%20problem%20explained%20with%20almost%20no%20math%20http%3A%2F%2Fgalgreen.com%2FTaxiCabProblem%2F" target="_blank">Mail</a><br/>
                             Find me: <a href="https://www.facebook.com/gal.green" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/pub/gal-green/8/95a/205" target="_blank">LinkedIn</a> |
-                            Find the code (open-source): <a href="https://github.com/Demeno/TaxicabExplorable" target="_blank">GitHub</a>
+                            Find the code (open-source): <a href="https://github.com/Demeno/TaxicabExplorable" target="_blank">GitHub</a><br/>
+                            Please give me some feedback: <a href="https://www.surveymonkey.com/r/5CY2SYK" target="_blank">2 min. survey</a>
                         </p>
                         <p>
                             Based on the original taxicab problem by Amos Tversky and Daniel Kahneman (1982)
