Intro slide in progress

--- a/index.html
+++ b/index.html
@@ -42,7 +42,23 @@
     <body> 
         <div class="main-wrapper">
             <main>
-                <section id="slide1" class="slide">
+                <section id="intro" class="slide">
+                    <p>
+                        Welcome to
+                    </p>
+                    <h1>
+                         The Taxi-cab Problem<br/>Explorable Explanation
+                    </h1>
+                    <p class="play-time">
+                        play time: 8 min
+                    </p>
+                    <p>
+                        We'll start playing with simulations soon,<br/>
+                        but first we should take a look at the original Taxi-cab Problem from 1982
+                    </p>
+                    <button id="intro-continue-button" class="cta">let's begin!</button>
+                </section>
+                <section id="slide1" class="slide collapsed">
                     <div class="top-part">
                         <section class="text-container">
                             <section id="slide1-text1">
