* background is now white * intro graphics in progress * better button layout * typo fixed

--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
                     <p class="play-time">
                         play time: 8 min
                     </p>
+                    <div class="intro-animation-container">
+                        <div>
+                            <svg style="width: 72.887px; height: 36.896px; fill: rgba(0,128,0,0.5);"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                        </div>
+                        <div class="cabs-container">
+                            <svg><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                        </div>
+                        <div>
+                                <svg style="width: 72.887px; height: 36.896px; fill: rgba(0,128,0,0.5);"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                        </div>
+                        <div>
+                                <svg style="width: 72.887px; height: 36.896px; fill: rgba(0,128,0,0.5);"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                        </div>
+                        <div class="cabs-container">
+                                <svg><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                        </div>
+                        <div>
+                                <svg style="width: 72.887px; height: 36.896px; fill: rgba(0,128,0,0.5);"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                        </div>
+                    </div>
                     <p>
                         We'll start playing with simulations soon,<br/>
                         but first we should take a look at the original Taxi-cab Problem from 1982
@@ -303,7 +323,7 @@
                                     <p>
                                         Well done!<br/>
                                         Have you noticed? You’ve recreated our original question!<br/>
-                                        90% green cab, 10% blue, 80% accurate witness.<br/>
+                                        90% green cabs, 10% blue, 80% accurate witness.<br/>
                                         Only 1 out of the 3 “blue” cabs is really blue,<br/>
                                         that’s nearly 30%.
                                     </p>
