intro slide done

--- a/index.html
+++ b/index.html
@@ -54,22 +54,46 @@
                     </p>
                     <div class="intro-animation-container">
                         <div>
-                            <svg style="width: 72.887px; height: 36.896px; fill: rgba(0,128,0,0.5);"><use xlink:href="svg/sprite.svg#cab"></use></svg>
-                        </div>
-                        <div class="cabs-container">
-                            <svg><use xlink:href="svg/sprite.svg#cab"></use></svg>
-                        </div>
-                        <div>
-                                <svg style="width: 72.887px; height: 36.896px; fill: rgba(0,128,0,0.5);"><use xlink:href="svg/sprite.svg#cab"></use></svg>
-                        </div>
-                        <div>
-                                <svg style="width: 72.887px; height: 36.896px; fill: rgba(0,128,0,0.5);"><use xlink:href="svg/sprite.svg#cab"></use></svg>
-                        </div>
-                        <div class="cabs-container">
-                                <svg><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <img src="images/intro_house.svg" style="left: 2%;" />
+                            <img src="images/intro_tree.svg" style="left: 11%;" />
+                            <img src="images/intro_house.svg" style="left: 28.5%;" />
+                            <img src="images/intro_tree.svg" style="left: 26%;" />
+                            <img src="images/intro_tree.svg" style="left: 42%;" />
+                            <img src="images/intro_tree.svg" style="left: 60%;" />
+                            <img src="images/intro_house.svg" style="left: 64%;" />
+                            <img src="images/intro_house.svg" style="left: 70%;" />
+                            <img src="images/intro_tree.svg" style="left: 94%;" />
+                            <img src="images/intro_house.svg" style="left: 98%;" />
                         </div>
                         <div>
-                                <svg style="width: 72.887px; height: 36.896px; fill: rgba(0,128,0,0.5);"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <img src="images/intro_road.svg" />
+                        </div>
+                        <div class="cabs-container" style="transform: scaleX(-1) translateY(-26px);">
+                            <svg class="green"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="green"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="blue"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="green"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="blue"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="blue"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="green"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                        </div>
+                        <div class="cabs-container" style="transform: translateY(-6px);">
+                            <svg class="blue"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="green"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="green"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="blue"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="blue"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="green"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                            <svg class="blue"><use xlink:href="svg/sprite.svg#cab"></use></svg>
+                        </div>
+                        <div>
+                            <img src="images/intro_tree.svg" style="left: 4%;" />
+                            <img src="images/intro_house.svg" style="left: 26%;" />
+                            <img src="images/intro_tree.svg" style="left: 38%;" />
+                            <img src="images/intro_house.svg" style="left: 50%;" />
+                            <img src="images/intro_house.svg" style="left: 70%;" />
+                            <img src="images/intro_tree.svg" style="left: 77%;" />
+                            <img src="images/intro_house.svg" style="left: 93%;" />
                         </div>
                     </div>
                     <p>
