Less buggy intro layout in mobile Chrome portrait mode

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 </script>
         <title>Taxi-cab problem explorable by Gal Green</title>
         
+        <link rel="manifest" href="manifest.json" />
         <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700" rel="stylesheet">
         <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
         <link rel="preload" href="svg/sprite.svg" as="image" />
-        <meta name="viewport" content="height=600, initial-scale=0.8"> 
-        
+        <meta name="viewport" content="height=600, initial-scale=0.8">
         <meta property="og:title"              content="The Taxicab Problem - an explorable by Gal Green" />
         <meta property="og:description"        content="An unintuitive probability problem explained with almost no math" />
         <meta property="og:image"              content="http://www.galgreen.com/TaxiCabProblem/images/facebookImage.jpg" />
